sass edits, fix file tree overflow

--- a/client/src/styles/scss/App.scss
+++ b/client/src/styles/scss/App.scss
@@ -38,12 +38,15 @@ code {
 
   .component-container1 {
     display: grid;
+    
     grid-template-columns: 1fr 2fr 1fr;
     grid-template-areas: 
       "Filetree Video Chat";
 
     .Filetree-display {
       position: relative;
+      max-height: 52vh;
+      overflow-y: auto; 
       height: 100%;
       width: 100%; 
       grid-area: Filetree;
